src/objects/Entry_Record__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line3__c</fullName>
        <label>Address Line 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_To_Data_Sharing__c</fullName>
        <description>Y or N</description>
        <label>Consent To Data Sharing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Sign__c</fullName>
        <label>Current Balance Sign</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Balance__c</fullName>
        <label>Default Balance</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Date__c</fullName>
        <label>Default Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Details__c</fullName>
        <label>Name Details</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account_Number__c</fullName>
        <label>New Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Account_Holders__c</fullName>
        <label>Number of Account Holders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_Account_Number__c</fullName>
        <label>OI_Account_Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Account_Type__c</fullName>
        <label>OI_Account_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line1__c</fullName>
        <label>OI_Address_Line1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line2__c</fullName>
        <label>OI_Address_Line2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line3__c</fullName>
        <label>OI_Address_Line3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Birth_Date__c</fullName>
        <label>OI_Birth_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_Date_of_Application__c</fullName>
        <label>OI Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_Declared_Salary__c</fullName>
        <label>OI_Declared_Salary</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_Forename__c</fullName>
        <label>OI_Forename</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Other_Name__c</fullName>
        <label>OI_Other_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Postcode__c</fullName>
        <label>OI_Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Salary_Verified__c</fullName>
        <description>Y or N</description>
        <label>OI Salary Verified</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Suffix__c</fullName>
        <label>OI_Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Surname__c</fullName>
        <label>OI_Surname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Title__c</fullName>
        <label>OI_Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address_2__c</fullName>
        <label>Previous Address 2</label>
        <length>168</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address__c</fullName>
        <label>Previous Address 1</label>
        <length>168</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Code__c</fullName>
        <label>Record Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_Frequency__c</fullName>
        <label>Repayment Frequency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_Period__c</fullName>
        <label>Repayment Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Value__c</fullName>
        <label>Repayment Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Net_Gross__c</fullName>
        <description>N = Monthly Net , G = Annual Gross</description>
        <label>Salary (Net/Gross)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare1__c</fullName>
        <label>Spare1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare2__c</fullName>
        <label>Spare2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare3__c</fullName>
        <label>Spare 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Indicator__c</fullName>
        <label>Special Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Balance__c</fullName>
        <label>Start Balance</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transient_Association_Flag__c</fullName>
        <label>Transient Association Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Own_Data__c</fullName>
        <label>User Own Data</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>Entry Record</label>
    <nameField>
        <label>Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entry Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>